PHP 4.0                                                                    NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

?? ??? 200?, Version 4.0.6
- Modified get_parent_class() and get_class_methods() to accept a class name as
  well as a class instance. (Andrei, Zend Engine)
- Added support for UNC style paths. (\\server\share\file, //server/share/file)
  (Daniel, TSRM)
- Added dbx module (database abstraction) to the repository. (Marc)
- Using ITypeInfo instead of IDispatch if possible. This makes DCOM calls
  and even COM calls much faster.
  All ini settings are now prefixed by 'com.'.
  Now you need not provide a path to the file containing the typelib, you can
  also provide the GUID of the TypeLib - entry or an IID for preloading
  type - information. (phanto)
- Rewrite of domxml. It's now mostly DOM Level 2 conform. (Uwe)
- Added array_map() function that applies a callback to the elements
  of given arrays and returns the result. It can also be used with a
  null callback to transpose arrays. (Andrei)
- Added array_filter(), which allows filtering of array elements via
  the specified callback. (Andrei)
- Fixed all relevant array functions to avoid moving the internal array
  pointer during operations. (Andrei)
- IMPORTANT: removed /F modifier handling from preg_replace(). Instead
  one should use new preg_replace_callback() function. (Andrei)
- Added mysql_unbuffered_query(), which is useful for very large result sets
  (Zeev)

?? ??? 200?, Version 4.0.5
- New FastCGI server module. (Ben Mansell)
- Added array_reduce(), which allows iterative reduction of an array
  to a single value via a callback function. (Andrei)
- The imageloadfont function of the gd extension should be not platform
  dependent after this fix. (alex@zend.com)
- Fixed a compatibility problem in some file functions (fgets, fputs, fread,
  fwrite). The ANSI standard says that if a file is opened in read/write